# simple-akeneo-client

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
src/akeneo_client/: auth.py  cli.py  config.py  http.py  models.py  products.py
